--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -12,9 +12,9 @@ nav {
   width: 100%;
   height: $nav-footer-height;
   padding: 0.5rem 1rem;
+  user-select: none;
   transition: transform 0.3s ease-in-out;
   transform: translateY(0);
-  user-select: none;
 
   div {
     display: none;
@@ -28,7 +28,7 @@ a {
   justify-content: center;
   width: 30%;
   height: 100%;
-  padding: 0.2rem;
+  padding: 0.2rem 0.8rem;
   font-size: 1.1rem;
   font-weight: bold;
   line-height: 3rem;
@@ -56,9 +56,9 @@ a {
   width: 4rem;
   height: 4rem;
   margin: 1rem;
+  color: #fff;
   background: $theme-color;
   border-radius: 50%;
-  color: #fff;
   box-shadow: 0 0 10px var(--background-color);
   transition: transform 0.3s ease-in-out;
 
